<resources>
    <string name="app_name">好看新一图</string>
    <string name="lookmore">查看更多</string>

    <string name="welcome">Welcome</string>
    <string name="welcome_sub">这个地方只有我们知道，一个专属于我们的地方</string>
    <string name="have_account">已有账号?</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phonenum">手机号</string>
    <string name="invitecode">邀请码</string>
    <string name="indentifycode">验证码</string>
    <string name="getindentifycode">获取验证码</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="sms_login">短信验证登录</string>
    <string name="personal_data">个人资料</string>
    <string name="skip">暂时跳过</string>
    <string name="nickname">昵称</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <!--<string name="upload_et_count">%1$d/150</string>-->


    <!-- view tag 中用到的key-->
    <string name="TAG_KEY_IMG_HOLDER">TAG_KEY_IMG_HOLDER</string>
    <string name="TAG_KEY_LISTENER_HOLDER">TAG_KEY_LISTENER_HOLDER</string>
    <string name="TAG_KEY_IS_FADEIN">TAG_KEY_IS_FADEIN</string>
    <string name="TAG_KEY_POSITION">TAG_KEY_POSITION</string>
    <string name="TAG_KEY_BEAN_FOR_BIGIMG">TAG_KEY_POSITION</string>
</resources>
