<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="40dp"
    android:layout_centerHorizontal="true"
    android:background="@drawable/login_register_bg"
    android:id="@+id/rl_item0_1"
    android:layout_width="285dp"
    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_1"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:text="@string/phonenum"
            android:textSize="14sp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="44dp"
            android:textColor="@color/hei_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_1"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:textSize="14sp"
            android:background="@null"
            android:hint="请输入您的手机号码"
            android:layout_marginLeft="2dp"
            android:layout_alignBaseline="@id/tv_1"
            android:layout_toRightOf="@id/tv_1"
            android:textColor="@color/edittext"
            android:padding="7dp"
            android:singleLine="true"
            android:layout_marginRight="30dp"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/devider_1"
            android:layout_below="@id/tv_1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@color/hei_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_2"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:text="@string/indentifycode"
            android:textSize="14sp"
            android:layout_below="@id/devider_1"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/hei_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/tv_desc"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:textColor="@color/anhuang"
            android:textSize="14sp"
            android:layout_alignBaseline="@id/tv_2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/getindentifycode"
            android:padding="7dp"
            android:gravity="center"
            android:layout_width="88dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_2"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:textSize="14sp"
            android:enabled="true"
            android:background="@null"
            android:layout_marginLeft="2dp"
            android:inputType="number"
            android:padding="7dp"
            android:singleLine="true"
            android:layout_alignBaseline="@id/tv_2"
            android:layout_toRightOf="@id/tv_2"
            android:layout_toLeftOf="@id/tv_desc"
            android:textColor="@color/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_below="@id/devider_1"
            android:layout_marginTop="27dp"
            android:layout_toLeftOf="@id/tv_desc"
            android:layout_marginRight="1dp"
            android:background="@color/hei_10"
            android:layout_width="1dp"
            android:layout_height="13dp"/>

        <View
            android:id="@+id/divider_2"
            android:layout_below="@id/tv_2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@color/hei_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_4"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:layout_below="@id/divider_2"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="25dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:text="@string/login"
            android:padding="10dp"
            android:textColor="@color/anhuang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
