<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_persiondata"
        android:includeFontPadding="false"
        android:typeface="normal"
        android:text="@string/personal_data"
        android:textColor="@color/bai_90"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_skip"
        android:includeFontPadding="false"
        android:typeface="normal"
        android:text="@string/skip"
        android:textColor="@color/click_bai30"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="12sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/skip_bg"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/icon_login_littlearrow"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/ib_close"
        android:scaleType="center"
        android:background="@null"
        android:src="@drawable/icon_login_close"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <RelativeLayout
        android:layout_below="@id/tv_persiondata"
        android:layout_marginTop="157dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_register_bg"
        android:id="@+id/rl_item0_1"
        android:layout_width="285dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_1"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:text="@string/nickname"
            android:textSize="14sp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="74dp"
            android:textColor="@color/hei_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.rockerhieu.emojicon.EmojiconEditText
            android:id="@+id/et_1"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:textSize="14sp"
            android:background="@null"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="67dp"
            android:hint="请输入您的昵称"
            android:textColorHighlight="@color/hei_40"
            android:layout_toRightOf="@id/tv_1"
            android:textColor="@color/edittext"
            android:padding="7dp"
            android:singleLine="true"
            android:layout_marginRight="30dp"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/devider_1"
            android:layout_below="@id/tv_1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@color/hei_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


        <TextView
            android:id="@+id/tv_4"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:layout_below="@id/devider_1"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="25dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:text="@string/confirm"
            android:padding="10dp"
            android:textColor="@color/anhuang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <com.haokan.xinyitu.customView.CircleImageView
        android:id="@+id/civ_1"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:src="@drawable/icon_login_photo"
        android:layout_below="@id/tv_persiondata"
        android:layout_marginTop="120dp"
        app:civ_border_color = "#cce7e7e7"
        app:civ_border_width = "4dp"
        app:civ_border_overlay = "false"
        android:layout_centerHorizontal="true"
        android:layout_width="76dp"
        android:layout_height="76dp"/>

    <ImageView
        android:src="@drawable/icon_login_editphoto"
        android:layout_alignBottom="@id/civ_1"
        android:layout_alignRight="@id/civ_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>