<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_register_bg"
        android:id="@+id/rl_item0_1"
        android:layout_width="285dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_1"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:text="@string/phonenum"
            android:textSize="14sp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="44dp"
            android:textColor="@color/hei_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_1"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:hint="请输入您的手机号码"
            android:textSize="14sp"
            android:textColorHighlight="@color/hei_40"
            android:background="@null"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="37dp"
            android:layout_toRightOf="@id/tv_1"
            android:textColor="@color/edittext"
            android:inputType="phone"
            android:padding="7dp"
            android:singleLine="true"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/devider_1"
            android:layout_below="@id/tv_1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@color/hei_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_2"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:text="@string/indentifycode"
            android:textSize="14sp"
            android:layout_marginLeft="36dp"
            android:layout_below="@id/devider_1"
            android:layout_marginTop="25dp"
            android:textColor="@color/hei_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_desc"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:textColor="@color/anhuang"
            android:textSize="14sp"
            android:layout_below="@id/devider_1"
            android:layout_marginTop="18dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:padding="7dp"
            android:gravity="center"
            android:text="@string/getindentifycode"
            android:layout_width="88dp"
            android:layout_height="wrap_content"/>

            <!--android:layout_alignBaseline="@id/tv_2"-->
        <EditText
            android:id="@+id/et_2"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:textSize="14sp"
            android:enabled="true"
            android:background="@null"
            android:singleLine="true"
            android:layout_marginLeft="3dp"
            android:inputType="number"
            android:layout_below="@id/devider_1"
            android:layout_marginTop="18dp"
            android:layout_toRightOf="@id/tv_2"
            android:layout_toLeftOf="@id/tv_desc"
            android:textColor="@color/edittext"
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <View
            android:layout_below="@id/devider_1"
            android:layout_marginTop="27dp"
            android:layout_toLeftOf="@id/tv_desc"
            android:layout_marginRight="1dp"
            android:background="@color/hei_10"
            android:layout_width="1dp"
            android:layout_height="13dp"/>

        <View
            android:id="@+id/divider_2"
            android:layout_below="@id/tv_2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@color/hei_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_password"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:text="密码"
            android:textSize="14sp"
            android:singleLine="true"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="25dp"
            android:layout_below="@id/divider_2"
            android:textColor="@color/hei_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

            <!--android:layout_alignBaseline="@id/tv_password"-->
        <EditText
            android:id="@+id/et_password"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:hint="请输入密码"
            android:textSize="14sp"
            android:background="@null"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/tv_password"
            android:textColor="@color/edittext"
            android:textColorHighlight="@color/hei_40"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_below="@id/divider_2"
            android:layout_marginTop="18dp"
            android:padding="7dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/devider_3"
            android:layout_below="@id/tv_password"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@color/hei_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_invitecode"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:text="@string/invitecode"
            android:textSize="14sp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="25dp"
            android:layout_below="@id/devider_3"
            android:textColor="@color/hei_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

            <!--android:layout_alignBaseline="@id/tv_invitecode"-->
        <EditText
            android:id="@+id/et_3"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:hint="请输入正确的邀请码"
            android:textSize="14sp"
            android:singleLine="true"
            android:background="@null"
            android:layout_marginLeft="3dp"
            android:textColorHighlight="@color/hei_40"
            android:layout_below="@id/devider_3"
            android:layout_marginTop="18dp"
            android:layout_toRightOf="@id/tv_invitecode"
            android:textColor="@color/edittext"
            android:inputType="none"
            android:padding="7dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/devider_4"
            android:layout_below="@id/tv_invitecode"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@color/hei_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_4"
            android:includeFontPadding="false"
            android:typeface="normal"
            android:layout_below="@id/devider_4"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="22dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:text="@string/register"
            android:textColor="@color/anhuang"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_5"
        android:includeFontPadding="false"
        android:typeface="normal"
        android:text="@string/have_account"
        android:textColor="#7fe7e7e7"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="18dp"
        android:paddingTop="10dp"
        android:paddingBottom="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_6"
        android:includeFontPadding="false"
        android:typeface="normal"
        android:text="@string/login"
        android:layout_toRightOf="@id/tv_5"
        android:textColor="@color/shihuang"
        android:layout_alignParentBottom="true"
        android:textSize="14sp"
        android:paddingTop="18dp"
        android:paddingLeft="10dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_7"
        android:includeFontPadding="false"
        android:typeface="normal"
        android:text="注册代表您同意服务条款"
        android:textColor="#7fe7e7e7"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="14sp"
        android:paddingTop="18dp"
        android:paddingLeft="10dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>
